2009-12-05  Juri Linkov  <juri@jurta.org>

	* info.el (Info-find-node-2): Set `Info-current-subfile' to nil
	for virtual nodes.  (Bug#4147)
	(Info-find-node-2): Set `Info-current-node-virtual' to nil
	when moving from a virtual node.
	(Info-mode-menu): Add `Info-virtual-index' to the menu.
	(Info-mode): Add `Info-virtual-index' to the docstring.

2009-12-05  Eric Ludlam  <zappo@gnu.org>

	* cedet/semantic/bovine/c.el (semantic-c-describe-environment):
	Describe project macro symbols.

	* cedet/semantic/complete.el (semantic-complete-do-completion):
	Don't call semantic-collector-current-exact-match.

	* cedet/ede.el (ede-apply-preprocessor-map): Accept lists of
	ede-objects as targets.

	* cedet/ede/pmake.el (ede-proj-makefile-insert-variables): Output
	a target's object list even if compiler vars are already in the
	Makefile.

	* cedet/ede/emacs.el (ede-preprocessor-map): Add config.h to the
	list of headers producing necessary macros.

2009-12-05  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-map-entries): Use marker to keep
	track of the buffer position of the end of a BibTeX entry as this
	position may change during reformatting.
	(bibtex-format-entry): Remove whitespace before processing
	numerical fields so that we recognize the latter properly.
	(bibtex-reformat): Do not use push which changes the global value
	of bibtex-entry-format.
	(bibtex-field-braces-alist, bibtex-field-strings-alist)
	(bibtex-field-re-init): Replace only space characters by regexp
	for whitespace.
	(bibtex-generate-url-list, bibtex-cite-matcher-alist): Fix
	docstring.
	(bibtex-initialize): Also update bibtex-strings.
	(bibtex-kill-field): Preserve white space at end of entry.
	(bibtex-kill-entry, bibtex-yank-pop, bibtex-insert-kill): Update
	bibtex-reference-keys.

2009-12-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-pcm--merge-try): Also consider placing